--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -51,25 +51,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameModel\AnimatedObject.cs" />
-    <Compile Include="GameModel\Cell.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="GameModel\AnimatedObjects\AnimatedObject.cs" />
+    <Compile Include="GameModel\MapSourse\Cell.cs" />
+    <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="GUI\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameModel\InanimateObject.cs" />
-    <Compile Include="GameModel\Map.cs" />
-    <Compile Include="GameModel\Map_Tests.cs" />
-    <Compile Include="GameModel\Noise.cs" />
-    <Compile Include="GameModel\NoiseSource.cs" />
-    <Compile Include="GameModel\NoiseType.cs" />
+    <Compile Include="GameModel\InanimateObjects\InanimateObject.cs" />
+    <Compile Include="GameModel\MapSourse\Map.cs" />
+    <Compile Include="Tests\Map_Tests.cs" />
+    <Compile Include="GameModel\MapSourse\Noise.cs" />
+    <Compile Include="GameModel\MapSourse\NoiseSource.cs" />
+    <Compile Include="GameModel\MapSourse\NoiseType.cs" />
     <Compile Include="GameModel\GameState.cs" />
-    <Compile Include="GameModel\ICreature.cs" />
+    <Compile Include="GameModel\AnimatedObjects\ICreature.cs" />
     <Compile Include="GameModel\ITimer.cs" />
-    <Compile Include="GameModel\Player.cs" />
-    <Compile Include="GameModel\TimersManager.cs" />
+    <Compile Include="GameModel\AnimatedObjects\Player.cs" />
+    <Compile Include="GameModel\Managers\TimersManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameModel\Query.cs" />
@@ -95,5 +95,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ТЗ.txt" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
