--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -51,7 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameModel\AnimatedObjects\AnimatedObject.cs" />
+    <Compile Include="GameModel\AnimatedObjects\AnimateObject.cs" />
+    <Compile Include="GameModel\Managers\AnimatesManager.cs" />
     <Compile Include="GameModel\MapSourse\Cell.cs" />
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
