--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameModel\AnimatedObjects\MobileObject.cs" />
+    <Compile Include="GameModel\Direction.cs" />
+    <Compile Include="GameModel\Managers\AnimatesManager.cs" />
     <Compile Include="GameModel\MapSourse\Cell.cs" />
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
