--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GameModel\AnimatedObjects\MobileObject.cs" />
     <Compile Include="GameModel\Direction.cs" />
     <Compile Include="GameModel\InanimateObjects\IDecor.cs" />
+    <Compile Include="GameModel\InanimateObjects\ImmobileObject.cs" />
     <Compile Include="GameModel\Managers\AnimatesManager.cs" />
     <Compile Include="GameModel\Managers\FileManager.cs" />
     <Compile Include="GameModel\MapSourse\Cell.cs" />
@@ -64,7 +65,7 @@
     <Compile Include="GUI\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GameModel\InanimateObjects\ImmobileObject.cs" />
+    <Compile Include="GameModel\InanimateObjects\ObjectsContainer.cs" />
     <Compile Include="GameModel\MapSourse\Map.cs" />
     <Compile Include="GameModel\Managers\MapManager.cs" />
     <Compile Include="GameModel\MapSourse\Noise.cs" />
