--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -55,10 +55,10 @@
     <Compile Include="GameModel\Direction.cs" />
     <Compile Include="GameModel\InanimateObjects\IDecor.cs" />
     <Compile Include="GameModel\InanimateObjects\ImmobileObject.cs" />
-    <Compile Include="GameModel\Managers\AnimatesManager.cs" />
+    <Compile Include="GameModel\Managers\MobileObjectsManager.cs" />
     <Compile Include="GameModel\Managers\FileManager.cs" />
     <Compile Include="GameModel\MapSourse\Cell.cs" />
-    <Compile Include="GameModel\ServiceClasses\ResultReadingMapState.cs" />
+    <Compile Include="GameModel\ServiceClasses\MapStateReadingResult.cs" />
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
