--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -51,9 +51,18 @@
     <Compile Include="GameModel\ConverterPressedKey.cs" />
     <Compile Include="GameModel\Enums\AIActionType.cs" />
     <Compile Include="GameModel\FieldOfView\FieldOfViewRectangle.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\BrokenPieces.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Button.cs" />
-    <Compile Include="GameModel\ImmobileObjects\Decors\Door.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\Carpet.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\Chair.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\ClosedDoor.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\DoorLock.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\Jewel.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\OpenedDoor.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\Painting.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Table.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\Treasure.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Decors\Vase.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Wall.cs" />
     <Compile Include="GameModel\Managers\GameInformationManager.cs" />
     <Compile Include="GameModel\MobileObjects\Guard.cs" />
