Из последних сил дорабатываю охранника

--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -73,6 +73,8 @@
     <Compile Include="GameModel\Managers\MobileObjectsManager.cs" />
     <Compile Include="GameModel\Managers\FileManager.cs" />
     <Compile Include="GameModel\MapSource\Cell.cs" />
+    <Compile Include="GameModel\PathFinder.cs" />
+    <Compile Include="GameModel\ServiceClasses\Deque.cs" />
     <Compile Include="GameModel\ServiceClasses\InitializationMobileObject.cs" />
     <Compile Include="GameModel\ServiceClasses\Instruction.cs" />
     <Compile Include="GameModel\ServiceClasses\MapStateReadingResult.cs" />
