--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -61,14 +61,16 @@
     <Compile Include="GameModel\ImmobileObjects\Decors\ClosedCupboard.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\ClosedDoor.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Lock.cs" />
-    <Compile Include="GameModel\ImmobileObjects\Decors\Jewel.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Items\Jewel.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\OpenedCupboard.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\OpenedDoor.cs" />
-    <Compile Include="GameModel\ImmobileObjects\Decors\Painting.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Items\Key.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Items\Painting.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Table.cs" />
-    <Compile Include="GameModel\ImmobileObjects\Decors\Treasure.cs" />
-    <Compile Include="GameModel\ImmobileObjects\Decors\Vase.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Items\Treasure.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Items\Vase.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Wall.cs" />
+    <Compile Include="GameModel\ImmobileObjects\IItem.cs" />
     <Compile Include="GameModel\Managers\GameInformationManager.cs" />
     <Compile Include="GameModel\MapSource\LightController.cs" />
     <Compile Include="GameModel\MapSource\LightSource.cs" />
