--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -53,7 +53,6 @@
   <ItemGroup>
     <Compile Include="GameModel\ConverterPressedKey.cs" />
     <Compile Include="GameModel\Enums\AIActionType.cs" />
-    <Compile Include="GameModel\FieldOfView\FieldOfViewRectangle.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\BrokenPieces.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Button.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Carpet.cs" />
@@ -112,6 +111,7 @@
     <Compile Include="GameModel\Enums\Query.cs" />
     <Compile Include="Tests\Dijkstra_tests.cs" />
     <Compile Include="Tests\NoiseController_tests.cs" />
+    <Compile Include="Tests\ObjectsContainer_Tests.cs" />
     <Compile Include="Tests\PathFinder_Tests.cs" />
     <Compile Include="Tests\MapManager_Tests.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
