--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameModel\Enums\Query.cs" />
     <Compile Include="Tests\Dijkstra_tests.cs" />
+    <Compile Include="Tests\MobileObjectsManager_Tests.cs" />
     <Compile Include="Tests\ObjectsContainer_Tests.cs" />
     <Compile Include="Tests\PathFinder_Tests.cs" />
     <Compile Include="Tests\MapManager_Tests.cs" />
