--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameModel\Enums\Query.cs" />
+    <Compile Include="Tests\Deque_tests.cs" />
     <Compile Include="Tests\Dijkstra_tests.cs" />
     <Compile Include="Tests\MobileObjectsManager_Tests.cs" />
     <Compile Include="Tests\ObjectsContainer_Tests.cs" />
