--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -64,6 +64,7 @@
     <Compile Include="GameModel\ImmobileObjects\Decors\ClosedDoor.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\Lock.cs" />
     <Compile Include="GameModel\ImmobileObjects\Item.cs" />
+    <Compile Include="GameModel\ImmobileObjects\Items\BurglaryToolkit.cs" />
     <Compile Include="GameModel\ImmobileObjects\Items\Jewel.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\OpenedCupboard.cs" />
     <Compile Include="GameModel\ImmobileObjects\Decors\OpenedDoor.cs" />
