--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -93,12 +93,6 @@
     <Compile Include="GameModel\ServiceClasses\InitializationMobileObject.cs" />
     <Compile Include="GameModel\ServiceClasses\Instruction.cs" />
     <Compile Include="GameModel\ServiceClasses\MapStateReadingResult.cs" />
-    <Compile Include="GUI\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="GameModel\ImmobileObjects\ObjectsContainer.cs" />
     <Compile Include="GameModel\MapSource\Map.cs" />
     <Compile Include="GameModel\Managers\MapManager.cs" />
@@ -112,6 +106,9 @@
     <Compile Include="GameModel\ITemporaryObject.cs" />
     <Compile Include="GameModel\MobileObjects\Creature\Player.cs" />
     <Compile Include="GameModel\Managers\TemporaryObjectsManager.cs" />
+    <Compile Include="GUI\GameWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameModel\Enums\Query.cs" />
@@ -152,6 +149,8 @@
   <ItemGroup>
     <Content Include="ТЗ.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
