--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -147,10 +147,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\guard.png" />
+    <Content Include="Images\player.png" />
     <Content Include="ТЗ.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Images\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
