--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F002181D-C23F-4B03-9B4B-A12A2632EA7C}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>GameThief</RootNamespace>
     <AssemblyName>GameThief</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
@@ -122,7 +122,7 @@
     <Compile Include="Tests\MapManager_Tests.cs" />
     <Compile Include="Tests\Player_test.cs" />
     <Compile Include="Tests\TemporaryObjectsManager_Tests.cs" />
-    <Compile Include="Tests\SampleMapSetter.cs" />
+    <Compile Include="GameModel\GameSetter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
