--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameModel\ConverterPressedKey.cs" />
+    <Compile Include="GameModel\PressedKeyConverter.cs" />
     <Compile Include="GameModel\Enums\CreatureTypes.cs" />
     <Compile Include="GameModel\Enums\CellType.cs" />
     <Compile Include="GameModel\Enums\LevelOfAlertness.cs" />
@@ -95,7 +95,7 @@
     <Compile Include="GameModel\PathFinder.cs" />
     <Compile Include="GameModel\ServiceClasses\Deque.cs" />
     <Compile Include="GameModel\ServiceClasses\Dijkstra.cs" />
-    <Compile Include="GameModel\ServiceClasses\InitializationMobileObject.cs" />
+    <Compile Include="GameModel\ServiceClasses\MobileObjectInitialization.cs" />
     <Compile Include="GameModel\ServiceClasses\Instruction.cs" />
     <Compile Include="GameModel\ServiceClasses\MapStateReadingResult.cs" />
     <Compile Include="GameModel\ImmobileObjects\ObjectsContainer.cs" />
@@ -117,7 +117,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameModel\Enums\Query.cs" />
-    <Compile Include="Tests\ConverterPressedKey_Tests.cs" />
+    <Compile Include="Tests\PressedKeyConverter_Tests.cs" />
     <Compile Include="Tests\Deque_Tests.cs" />
     <Compile Include="Tests\Dijkstra_tests.cs" />
     <Compile Include="Tests\GameState_Tests.cs" />
@@ -125,7 +125,7 @@
     <Compile Include="Tests\ObjectsContainer_Tests.cs" />
     <Compile Include="Tests\PathFinder_Tests.cs" />
     <Compile Include="Tests\MapManager_Tests.cs" />
-    <Compile Include="Tests\Player_test.cs" />
+    <Compile Include="Tests\Player_Tests.cs" />
     <Compile Include="Tests\TemporaryObjectsManager_Tests.cs" />
     <Compile Include="GameModel\GameSetter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
