--- a/GameThief.csproj
+++ b/GameThief.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameModel\Enums\Query.cs" />
+    <Compile Include="Tests\Guard_Tests.cs" />
     <Compile Include="Tests\PressedKeyConverter_Tests.cs" />
     <Compile Include="Tests\Deque_Tests.cs" />
     <Compile Include="Tests\Dijkstra_tests.cs" />
